--- a/templates/index.html
+++ b/templates/index.html
@@ -2,35 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Guri Bowling Bár & Pizzéria</title>
     <link rel="stylesheet" href="/static/css/main.css" id="main">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <div id="headline" class="field">
         <div id="logo">
-            <p><strong>GURI BOWLING BÁR & PIZZÉRIA</strong></p>
+            <img src="/static/img/WEBLOGO_GURI.png">
+<!--            <p>GURI BOWLING BÁR & PIZZÉRIA</p>-->
         </div>
         <div id="head_buttons">
             <a href="#introduction" id="main_page">Kezdőlap</a>
             <a href="#prices" id="menu_page">Áraink</a>
             <a href="#services" id="services_page">Szolgáltatások</a>
             <a href="#reservation" id="reservation_page">Foglalás</a>
-            <a href="contact" id="contact_page">Kapcsolat</a>
+            <a href="#contact" id="contact_page">Kapcsolat</a>
         </div>
     </div>
 
     <div id="introduction" class="field">
-        <p id="welcome_headline">Üdvözlünk a Guri Bowling Bár & Pizzéria honlapján!</p>
-        <p id="open_headline">MEGNYITOTTUNK!</p>
-        <div id="welcome_text">
-            <p style="margin-left: -100px">Játékos kikapcsolódásra vágysz? Ennél egy jó pizzát?</p>
-            <p style="margin-left: 100px">Vagy csak beugranál egy italra? Gurulj le a Guri-ba!</p>
-        </div>
-        <div id="open_text">
-            <p style="margin-left: 0">Ne hagyd ki nyitási akciónkat!</p>
-            <p style="margin-left: 100px">Októberben most minden pályafoglalás mellé 1 db 32cm-es pizzát adunk ajándékba!</p>
-        </div>
+        <img src="/static/img/webbackground.png">
+<!--        <p id="welcome_headline">Üdvözlünk a Guri Bowling Bár & Pizzéria honlapján!</p>-->
+<!--        <p id="open_headline">MEGNYITOTTUNK!</p>-->
+<!--        <div id="welcome_text">-->
+<!--            <p style="margin-left: -15%">Játékos kikapcsolódásra vágysz? Ennél egy jó pizzát?</p><br>-->
+<!--            <p style="margin-left: 15%; width: max-content;">Vagy csak beugranál egy italra? Gurulj le a Guri-ba!</p>-->
+<!--        </div>-->
+<!--        <div id="open_text">-->
+<!--            <p>Ne hagyd ki nyitási akciónkat!</p><br>-->
+<!--            <p>Októberben most minden pályafoglalás mellé 1 db 32cm-es pizzát adunk ajándékba!</p>-->
+<!--        </div>-->
     </div>
 
     <div id="prices" class="field">
@@ -68,9 +74,29 @@
         </p>
     </div>
 
-    <div id="reservation" class="field"></div>
+    <div id="reservation" class="field">
+<!--        <iframe src="https://calendar.google.com/calendar/embed?src=nvmnbsla71ul7lsfh11l3una28%40group.calendar.google.com&ctz=Europe%2FBudapest"-->
+<!--                style="border: 0"-->
+<!--                width="800"-->
+<!--                height="600"-->
+<!--                frameborder="0"-->
+<!--                scrolling="no">-->
+<!--        </iframe>-->
+        <p>Kapcsolat:</p>
+        <div id="contacts">
+            <a href=#maps>2837 Vértesszőlős Valusek Dezső utca 126</a>
+            <a href="#">+36 70 633-75-34</a>
+            <a href="#">guribowling@gmail.com</a>
+        </div>
+    </div>
 
-    <div id="contact" class="field"></div>
+    <div id="maps" class="field">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d978.7942578934951!2d18.380378843845232!3d47.613771215667704!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476a46b65ab6ff67%3A0xf7e9301317da94b0!2sCool-Ball%20Kft.!5e0!3m2!1shu!2shu!4v1632737523456!5m2!1shu!2shu"
+                style="border:0;"
+                allowfullscreen=""
+                loading="lazy">
+        </iframe>
+    </div>
 
     <div id="what_is_bowling" class="field">
         <p id="question" class="title"> Mi az a bowling? </p>
