--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,6 +4,16 @@
     --alt-color: #BF0505;
 }
 
+#introduction {
+        align-items: center;
+    }
+
+#introduction img {
+    margin: 0;
+    width: 100%;
+    height: auto;
+}
+
 @media only screen and (min-width: 810px) {
 
     * {
@@ -76,47 +86,33 @@
         font-weight: lighter;
     }
 
-    #introduction {
-        align-items: center;
-    }
+    /*#welcome_headline {*/
+    /*    font-size: 30px;*/
+    /*    margin: 80px 20% 0 0;*/
+    /*    width: max-content;*/
+    /*}*/
 
-    #introduction img {
-        margin: 0;
-        width: 100%;
-        height: auto;
-    }
+    /*#open_headline {*/
+    /*    font-size: 40px;*/
+    /*    margin: 20px 0 40px 30%;*/
+    /*    width: max-content;*/
+    /*}*/
 
-    #welcome_headline {
-        font-size: 30px;
-        margin: 80px 20% 0 0;
-        width: max-content;
-    }
+    /*#welcome_text {*/
+    /*    font-size: 25px;*/
+    /*    margin-top: 30px;*/
+    /*    width: max-content;*/
+    /*}*/
 
-    #open_headline {
-        font-size: 40px;
-        margin: 20px 0 40px 30%;
-        width: max-content;
-    }
+    /*#open_text {*/
+    /*    margin: 80px 0 80px 0;*/
+    /*    width: max-content;*/
+    /*}*/
 
-    #welcome_text {
-        font-size: 25px;
-        margin-top: 30px;
-        width: max-content;
-    }
-
-    #open_text {
-        margin: 80px 0 80px 0;
-        width: max-content;
-    }
-
-    #open_text p {
-        color: var(--alt-color);
-        font-size: 25px;
-    }
-
-    #prices {
-        /*background-color: var(--background-color-1);*/
-    }
+    /*#open_text p {*/
+    /*    color: var(--alt-color);*/
+    /*    font-size: 25px;*/
+    /*}*/
 
     #small_title {
         font-size: 25px;
@@ -131,12 +127,7 @@
         margin-bottom: 20px;
     }
 
-    #services {
-        /*background-color: var(--background-color-2);*/
-    }
-
     #reservation {
-        /*background-color: var(--background-color-1);*/
         min-height: 400px;
         align-items: center;
         flex-direction: column;
@@ -154,7 +145,6 @@
         align-items: center;
         flex-direction: row;
         justify-content: space-evenly;
-        /*margin: 80px 0 80px 0;*/
         width: 100%;
         min-width: max-content;
         margin: 80px 0 80px 0;
@@ -231,9 +221,122 @@
         border-bottom: solid var(--alt-color) 3px;
     }
 
+    #headline {
+        position: sticky;
+        top: 0;
+        z-index: 0;
+        overflow: hidden;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    #logo {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        margin: 10px 0 10px 10px;
+
+    }
+
     #logo img {
         width: 75px;
         height: auto;
+    }
+
+    #logo p {
+        width: max-content;
+    }
+
+    #head_buttons {
+        margin: 0 5px 0 0;
+        width: max-content;
+    }
+
+    #head_buttons a:hover {
+        padding-bottom: 0.3rem;
+        border-bottom: solid var(--alt-color) 3px;
+    }
+
+    #head_buttons a {
+        text-decoration: none;
+        margin: 0 5px 0 5px;
+        font-weight: lighter;
+        font-size: 15px;
+    }
+
+    #small_title {
+        font-size: 17px;
+        margin: 50px 0 30px 0;
+    }
+
+    .prices_dates {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 300px;
+        margin-bottom: 20px;
+    }
+
+    #reservation {
+        min-height: 400px;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    #reservation iframe {
+        align-self: center;
+        width: 600px;
+        height: 600px;
+        margin-bottom: 80px;
+    }
+
+    #reservation #contacts {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-evenly;
+        width: 100%;
+        min-width: max-content;
+        margin: 80px 0 80px 0;
+    }
+
+    #reservation p {
+        font-size: 20px;
+        font-weight: bold;
+        margin-top: 25%;
+    }
+
+    #reservation a {
+        font-size: 15px;
+        text-decoration: none;
+        border: solid var(--alt-color) 2px;
+        border-radius: 3rem;
+        padding: 0.75rem 0.75rem;
+        width: max-content;
+        margin: 10px 0 10px 0;
+    }
+
+    #maps iframe {
+        width: inherit;
+        height: 300px;
+    }
+
+    #bottomline {
+        background-color: #DFDFDF;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        height: 40px;
+
+    }
+
+    #bottomline p {
+        margin: 0 20px 0 20px;
+        color: #1F1F1F;
+        background: none;
+        text-shadow: none;
     }
 
 }
