--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Üdvözlünk a Guri Bowling Bár & Pizzéria honlapján! Játékos kikapcsolódásra vágysz? Ennél egy jó pizzát? Vagy csak beugranál egy italra? Gurulj le a Guri-ba!">
     <title>Guri Bowling Bár & Pizzéria</title>
     <link rel="stylesheet" href="/static/css/main.css" id="main">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,16 +18,16 @@
 <!--            <p>GURI BOWLING BÁR & PIZZÉRIA</p>-->
         </div>
         <div id="head_buttons">
-            <a href="#introduction" id="main_page">Kezdőlap</a>
-            <a href="#prices" id="menu_page">Áraink</a>
-            <a href="#services" id="services_page">Szolgáltatások</a>
-            <a href="#reservation" id="reservation_page">Foglalás</a>
-            <a href="#contact" id="contact_page">Kapcsolat</a>
+            <a href="#promotion">Nyitvatartás</a>
+            <a href="#prices_anchor">Áraink</a>
+            <a href="#res_anchor">Szolgáltatások</a>
+<!--            <a href="#reservation">Foglalás</a>-->
+            <a href="#reservation">Kapcsolat</a>
         </div>
     </div>
 
     <div id="introduction" class="field">
-        <img src="/static/img/webbackground.png">
+        <img src="/static/img/webbackground.jpg">
 <!--        <p id="welcome_headline">Üdvözlünk a Guri Bowling Bár & Pizzéria honlapján!</p>-->
 <!--        <p id="open_headline">MEGNYITOTTUNK!</p>-->
 <!--        <div id="welcome_text">-->
@@ -35,29 +36,56 @@
 <!--        </div>-->
 <!--        <div id="open_text">-->
 <!--            <p>Ne hagyd ki nyitási akciónkat!</p><br>-->
-<!--            <p>Októberben most minden pályafoglalás mellé 1 db 32cm-es pizzát adunk ajándékba!</p>-->
 <!--        </div>-->
     </div>
 
+    <div id="promotion" class="field">
+        <p>Októberben most minden pályafoglalás mellé 1 db 32cm-es pizzát adunk ajándékba!</p>
+    </div>
+
     <div id="prices" class="field">
+        <p id="open_title" class="title">Étterem nyitvatartás:</p>
+
+        <div class="description">
+            <div class="table_row">
+                <p>Hétfő - Csütörtök</p>
+                <p>14.00 - 22.00</p>
+            </div>
+
+            <div class="table_row">
+                <p>Péntek - Szombat</p>
+                <p>10.00 - 24.00</p>
+            </div>
+
+            <div class="table_row">
+                <p>Vasárnap</p>
+                <p>14.00 - 22.00</p>
+            </div>
+            <a id="prices_anchor"></a>
+        </div>
+
         <p id="prices_title" class="title">Áraink:</p>
+
         <div class="description">
             <p id="shoes">Cipő bérlés: 300 Ft/Alkalom/Fő</p>
             <p id="small_title">Pályabérlés:</p>
-            <div class="prices_dates">
-                <p id="hcs1">Hétfő - Csütörtök 14.00 - 16.00</p>
+            <div class="table_row">
+                <p>Hétfő - Csütörtök 14.00 - 16.00</p>
                 <p>5.500 Ft/Óra</p>
             </div>
 
-            <div class="prices_dates">
-                <p id="hcs2">Hétfő - Csütörtök 16.00 - 22.00</p>
+            <div class="table_row">
+                <p>Hétfő - Csütörtök 16.00 - 22.00</p>
                 <p>6.000 Ft/Óra</p>
             </div>
 
-            <div class="prices_dates">
-                <p id="pv">Péntek - Vasárnap</p>
+            <a id="res_anchor"></a>
+
+            <div class="table_row">
+                <p>Péntek - Vasárnap Nyitvatartási Időben</p>
                 <p>6.000 Ft/Óra</p>
             </div>
+
         </div>
     </div>
 
@@ -75,13 +103,6 @@
     </div>
 
     <div id="reservation" class="field">
-<!--        <iframe src="https://calendar.google.com/calendar/embed?src=nvmnbsla71ul7lsfh11l3una28%40group.calendar.google.com&ctz=Europe%2FBudapest"-->
-<!--                style="border: 0"-->
-<!--                width="800"-->
-<!--                height="600"-->
-<!--                frameborder="0"-->
-<!--                scrolling="no">-->
-<!--        </iframe>-->
         <p>Kapcsolat:</p>
         <div id="contacts">
             <a href=#maps>2837 Vértesszőlős Valusek Dezső utca 126</a>
