--- a/static/css/main.css
+++ b/static/css/main.css
@@ -40,7 +40,7 @@
         flex-direction: column;
         font-size: 30px;
         width: 100%;
-        border-bottom: solid var(--alt-color) 3px;
+        border-bottom: solid var(--alt-color) 2px;
     }
 
     #headline {
@@ -86,6 +86,13 @@
         font-weight: lighter;
     }
 
+    #promotion {
+    height: 160px;
+    font-size: 30px;
+    justify-content: space-around;
+    align-items: center;
+    }
+
     /*#welcome_headline {*/
     /*    font-size: 30px;*/
     /*    margin: 80px 20% 0 0;*/
@@ -119,7 +126,7 @@
         margin: 50px 0 30px 0;
     }
 
-    .prices_dates {
+    .table_row {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -128,16 +135,8 @@
     }
 
     #reservation {
-        min-height: 400px;
         align-items: center;
         flex-direction: column;
-    }
-
-    #reservation iframe {
-        align-self: center;
-        width: 600px;
-        height: 600px;
-        margin-bottom: 80px;
     }
 
     #reservation #contacts {
@@ -153,7 +152,7 @@
     #reservation p {
         font-size: 2rem;
         font-weight: bold;
-        margin-top: 25%;
+        margin-top: 80px;
     }
 
     #reservation a {
@@ -265,12 +264,24 @@
         font-size: 15px;
     }
 
+    #promotion {
+        height: 160px;
+        font-size: 20px;
+        justify-content: space-around;
+        align-items: center;
+        text-align: center;
+    }
+
+    #promotion p {
+        width: 80%;
+    }
+
     #small_title {
         font-size: 17px;
         margin: 50px 0 30px 0;
     }
 
-    .prices_dates {
+    .table_row {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
