--- a/templates/index.html
+++ b/templates/index.html
@@ -133,6 +133,26 @@
         </p>
     </div>
 
+    <div id="house_rules" class="field">
+        <div class="title">HÁZIREND</div>
+        <ol class="description">
+            <li>A pályákat 14-év alatti gyerekek csak szülő felügyelete mellett használhatják!</li>
+            <li>A játékban mindenki csak saját felelősségére vehet részt!</li>
+            <li>Az épületben a dohányzás TILOS!</li>
+            <li>A pályára csak bowlingcipöben lehet fellépni! Kérjük a Vendégeket, hogy a pálya időleges elhagyásakor a cipővédőket használják!</li>
+            <li>A pálya gurító területére való belépés balesetveszélyes!</li>
+            <li>A golyók elakadását, a pályák leállását szíveskedjenek a bowlingpálya személyzete felé jelezni, akik a műszaki hibák elhárítására fel vannak készítve.</li>
+            <li>A felelőtlen magatartásból eredő károkért mindenki anyagi felelősséggel tartozik!</li>
+            <li>A saját golyók használatából eredő esetleges károkért felelősséget nem vállalunk!</li>
+            <li>Kérünk mindenkit, hogy a golyófeladó gépbe és a kezelőkonzolhoz NE nyúljon!</li>
+            <li>Az előre lefoglalt pályák a birtokba vétel előtt 24 órával mondhatók le térítésmentesen. Ellenkező esetben a foglalást végző vendég köteles a lemondásra nem került pálya diját megtéríteni.</li>
+            <li>Az előre lefoglalt pálya 20 perc késés esetén értékesítésre kerül</li>
+            <li>Kérjük kedves vendégeinket, hogy a pálya elhagyása után a környező lakók nyugalmát NE zavarják!</li>
+            <li>A létesítmény területén belül csak az étteremben vásárolt ételek és italok fogyaszthatók!</li>
+            <li>Az őrizetlenül hagyott tárgyakért felelősséget NEM vállalunk!</li>
+        </ol>
+    </div>
+
     <div id="bottomline">
         <p id="name_tag">Guri Bowling Bár & Pizzéria</p>
         <p id="legal">Minden jog fenntartva 2021</p>
