--- a/Project/index.css
+++ b/Project/index.css
@@ -62,10 +62,19 @@
     letter-spacing: 0.1rem;
 }
 
+#header{
+    position: fixed;
+    width: 75%;
+    left: 50%;
+    transform: translate(-50%);
+    z-index: 2;
+}
+
 .field {
     width: 100%;
     border-bottom: solid var(--alt-color) 3px;
     height: max-content;
+    padding: 10px 16px;
 }
 
 .title {
@@ -85,7 +94,7 @@
 }
 
 .logo img {
-    width: 150px;
+    width: 100px;
     height: auto;
 }
 
@@ -116,6 +125,7 @@ iframe {
     margin: 0;
     width: 100%;
     height: auto;
+    opacity: 75%;
 }
 
 .table_row {
@@ -162,7 +172,7 @@ iframe {
     color: var(--c_red);
     background-color: var(--c_gray);
     padding: 16px;
-    font-size: 50px;
+    font-size: 30px;
     border: none;
     text-shadow: 2px 2px 3px var(--c_gray);
 }
